Added methods for regression statistics calculation

--- a/trend_analysis.ipynb
+++ b/trend_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f66d308a-a800-475f-a499-36f741ff6364",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "351ae3ff-d824-47f5-ab76-28a58b10d9c7",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "d5569d39-8713-4ca4-a58e-2234b2939da4",
    "metadata": {},
    "outputs": [],
@@ -41,54 +41,68 @@
     "    def __init__(self, data: pd.DataFrame, column_of_interest: str):\n",
     "        self.regression = LinearRegression()\n",
     "        self.column = column_of_interest\n",
-    "        self.data = data\n",
     "        \n",
-    "        x = self.data.index.to_numpy().reshape(-1,1)\n",
-    "        y = self.data[self.column].to_numpy().reshape(-1,1)\n",
-    "        self.init_regression(x, y)\n",
+    "        self.x = data.index.to_numpy().reshape(-1,1)\n",
+    "        self.y = data[self.column].to_numpy().reshape(-1,1)\n",
+    "        self.init_regression()\n",
     "        \n",
-    "    def init_regression(self, x, y):\n",
-    "        self.regression.fit(x, y)\n",
-    "        self.preds = self.regression.predict(x)\n",
+    "    def init_regression(self):\n",
+    "        self.regression.fit(self.x, self.y)\n",
+    "        self.preds = self.regression.predict(self.x)\n",
+    "        self.cals_errors()\n",
+    "        \n",
+    "    def cals_errors(self):\n",
+    "        self.err = self.y - self.preds\n",
+    "        \n",
+    "    def get_r_square(self):\n",
+    "        squared_errors = (self.err**2).sum()\n",
+    "        mean_y = self.y.mean()\n",
+    "        squared_deviations = sum([(observation - mean_y)**2 for observation in self.y.flatten().tolist()])\n",
+    "        r_square = 1 - squared_errors/squared_deviations\n",
+    "        return r_square\n",
+    "    \n",
+    "    def get_errors_expectation(self):\n",
+    "        return self.err.mean()\n",
     "        \n",
     "    def draw_plot_with_trend(self):\n",
-    "        plt.plot(self.data.index, self.data[self.column], self.data.index, self.preds.flatten())\n",
+    "        plt.plot(self.x.flatten(), self.y.flatten(), self.x.flatten(), self.preds.flatten())\n",
     "    \n",
     "    def draw_plot_without_trend(self):\n",
-    "        err = self.data[self.column].to_numpy().reshape(-1,1) - self.preds\n",
     "        plt.figure(figsize = (12,7))\n",
-    "        plt.plot(self.data.index, err.flatten(), self.data.index, np.zeros((len(self.data.index))))\n",
+    "        plt.plot(self.x.flatten(), self.err.flatten(), self.x.flatten(), np.zeros((len(self.x.flatten()))))\n",
     "        \n",
     "    def draw_plots(self):\n",
     "        fig, axes = plt.subplots(1, 2, figsize=(22, 7))\n",
-    "        err = self.data[self.column].to_numpy().reshape(-1,1) - self.preds\n",
-    "        axes[0].plot(self.data.index, self.data[self.column], self.data.index, self.preds.flatten())\n",
-    "        axes[1].plot(self.data.index, err.flatten(), self.data.index, np.zeros((len(self.data.index))))\n",
+    "        axes[0].plot(self.x.flatten(), self.y.flatten(), self.x.flatten(), self.preds.flatten())\n",
+    "        axes[1].plot(self.x.flatten(), self.err.flatten(), self.x.flatten(), np.zeros((len(self.x.flatten()))))\n",
     "        axes[0].set_title(\"Data with trend line\")\n",
     "        axes[1].set_title(\"Data after removing trend\")\n",
     "        \n",
     "        \n",
-    "class LogarifmicTrendAnalyzer(TrendAnalyzer):\n",
+    "class LogarithmicTrendAnalyzer(TrendAnalyzer):\n",
     "    def __init__(self, data: pd.DataFrame, column_of_interest: str):\n",
-    "        super(LogarifmicTrendAnalyzer, self).__init__(data, column_of_interest)\n",
+    "        super(LogarithmicTrendAnalyzer, self).__init__(data, column_of_interest)\n",
     "        \n",
-    "    def init_regression(self, x, y):\n",
-    "        self.regression.fit(x, np.log(y))\n",
-    "        self.preds = np.exp(self.regression.predict(x))\n",
+    "    def init_regression(self):\n",
+    "        self.regression.fit(self.x, np.log(self.y))\n",
+    "        self.preds = np.exp(self.regression.predict(self.x))\n",
+    "        self.cals_errors()\n",
+    "        \n",
     "        \n",
     "class SquareTrendAnalyzer(TrendAnalyzer):\n",
     "    def __init__(self, data: pd.DataFrame, column_of_interest: str):\n",
     "        super(SquareTrendAnalyzer, self).__init__(data, column_of_interest)\n",
     "        \n",
-    "    def init_regression(self, x, y):\n",
-    "        x = np.concatenate((x, np.power(x, 2)), axis=1)\n",
-    "        self.regression.fit(x, y)\n",
-    "        self.preds = self.regression.predict(x)"
+    "    def init_regression(self):\n",
+    "        x = np.concatenate((self.x, np.power(self.x, 2)), axis=1)\n",
+    "        self.regression.fit(x, self.y)\n",
+    "        self.preds = self.regression.predict(x)\n",
+    "        self.cals_errors()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "id": "bb304aaa-b9fe-49a3-9eaa-58eb1a130e77",
    "metadata": {},
    "outputs": [
@@ -104,13 +118,32 @@
     }
    ],
    "source": [
-    "analyzer_GOOG_sq = TrendAnalyzer(data_GOOG_fixed, 'Adj Close')\n",
-    "analyzer_GOOG_sq.draw_plots()"
+    "analyzer_GOOG = TrendAnalyzer(data_GOOG_fixed, 'Adj Close')\n",
+    "analyzer_GOOG.draw_plots()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
+   "id": "5fdd27b1-dc1d-419d-997f-4d42fc863e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of linear trend: 0.8425811868411359 \n",
+      "Expectation of errors: -2.4169404777383158e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of linear trend:\",analyzer_GOOG.get_r_square(), \"\\nExpectation of errors:\", analyzer_GOOG.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "1c636c84-d0fd-4b08-931e-74e5c6b4efbc",
    "metadata": {},
    "outputs": [
@@ -126,13 +159,32 @@
     }
    ],
    "source": [
-    "analyzer_GOOG_log = LogarifmicTrendAnalyzer(data_GOOG_fixed, 'Adj Close')\n",
+    "analyzer_GOOG_log = LogarithmicTrendAnalyzer(data_GOOG_fixed, 'Adj Close')\n",
     "analyzer_GOOG_log.draw_plots()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
+   "id": "beefce0f-8126-4010-82fe-24d408a1ba99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of logarithmic trend: 0.9541255983895763 \n",
+      "Expectation of errors: 0.36314601554491616\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of logarithmic trend:\",analyzer_GOOG_log.get_r_square(), \"\\nExpectation of errors:\", analyzer_GOOG_log.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "171695ef-a3a1-4616-a5f0-46260c0a346f",
    "metadata": {},
    "outputs": [
@@ -148,13 +200,32 @@
     }
    ],
    "source": [
-    "analyzer_GOOG = SquareTrendAnalyzer(data_GOOG_fixed, 'Adj Close')\n",
-    "analyzer_GOOG.draw_plots()"
+    "analyzer_GOOG_sq = SquareTrendAnalyzer(data_GOOG_fixed, 'Adj Close')\n",
+    "analyzer_GOOG_sq.draw_plots()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
+   "id": "1ae4f5c7-380b-4b49-b23b-441d66427d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of polinomial trend: 0.9607761104982029 \n",
+      "Expectation of errors: -3.5951989606357445e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of polinomial trend:\",analyzer_GOOG_sq.get_r_square(), \"\\nExpectation of errors:\", analyzer_GOOG_sq.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "b0052777-347e-4418-a763-b93eda592536",
    "metadata": {},
    "outputs": [
@@ -176,7 +247,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
+   "id": "b88f7a8c-337c-4772-8f0d-8c44625dbff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of linear trend: 0.7881861848469366 \n",
+      "Expectation of errors: -1.0982761728104594e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of linear trend:\",analyzer_IBM.get_r_square(), \"\\nExpectation of errors:\", analyzer_IBM.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "870fb37d-7d88-4d37-94d8-18bd1a67f291",
    "metadata": {},
    "outputs": [
@@ -192,13 +282,32 @@
     }
    ],
    "source": [
-    "analyzer_IBM_log = LogarifmicTrendAnalyzer(data_IBM_fixed, 'Adj Close')\n",
+    "analyzer_IBM_log = LogarithmicTrendAnalyzer(data_IBM_fixed, 'Adj Close')\n",
     "analyzer_IBM_log.draw_plots()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
+   "id": "7eacfd43-302e-4b93-a4c7-c5295586940a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of logarithmic trend: 0.5891030608940742 \n",
+      "Expectation of errors: 0.7994516779142214\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of logarithmic trend:\",analyzer_IBM_log.get_r_square(), \"\\nExpectation of errors:\", analyzer_IBM_log.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "b0ab2f0a-2099-470a-834a-088b5987df99",
    "metadata": {},
    "outputs": [
@@ -214,13 +323,32 @@
     }
    ],
    "source": [
-    "analyzer_IBM = SquareTrendAnalyzer(data_IBM_fixed, 'Adj Close')\n",
-    "analyzer_IBM.draw_plots()"
+    "analyzer_IBM_sq = SquareTrendAnalyzer(data_IBM_fixed, 'Adj Close')\n",
+    "analyzer_IBM_sq.draw_plots()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
+   "id": "bcbd7f22-7260-46a2-a16a-8128ab12394c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of polinomial trend: 0.7949760477527057 \n",
+      "Expectation of errors: -2.196552345620919e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of polinomial trend:\",analyzer_IBM_sq.get_r_square(), \"\\nExpectation of errors:\", analyzer_IBM_sq.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "c02c99ac-3376-4cc7-b333-b62798a41382",
    "metadata": {},
    "outputs": [
@@ -242,7 +370,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
+   "id": "05054c83-edd9-48da-8673-99fa95043706",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of linear trend: 0.6680574344745146 \n",
+      "Expectation of errors: -4.881227434713153e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of linear trend:\", analyzer_AAPL.get_r_square(), \"\\nExpectation of errors:\", analyzer_AAPL.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "f8e7fd6f-e9f2-4bcf-90b6-4f1a6a5356ae",
    "metadata": {},
    "outputs": [
@@ -258,13 +405,32 @@
     }
    ],
    "source": [
-    "analyzer_AAPL_log = LogarifmicTrendAnalyzer(data_AAPL_fixed, 'Adj Close')\n",
+    "analyzer_AAPL_log = LogarithmicTrendAnalyzer(data_AAPL_fixed, 'Adj Close')\n",
     "analyzer_AAPL_log.draw_plots()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
+   "id": "fa52550a-331f-4fee-8f35-96653c88d7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of logarithmic trend: 0.860723057678137 \n",
+      "Expectation of errors: 1.2389777384562222\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of logarithmic trend:\", analyzer_AAPL_log.get_r_square(), \"\\nExpectation of errors:\", analyzer_AAPL_log.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "5051f6b1-f168-4751-884e-4a1c996f5c5d",
    "metadata": {},
    "outputs": [
@@ -286,8 +452,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "ad3ae272-0ae9-4fb1-b117-53f9b1cea467",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_square of polinomial trend: 0.9433473677224892 \n",
+      "Expectation of errors: 9.762454869426306e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R_square of polinomial trend:\", analyzer_AAPL_sq.get_r_square(), \"\\nExpectation of errors:\", analyzer_AAPL_sq.get_errors_expectation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6f79f9-d36b-479c-a03b-2685ea5704d7",
    "metadata": {},
    "outputs": [],
    "source": []
